--- a/unix-like/.config/picom.conf
+++ b/unix-like/.config/picom.conf
@@ -1,9 +1,12 @@
 fading = false;
-fade-in-step = 0.05;
-fade-out-step = 0.05;
+fade-in-step = 0.07;
+fade-out-step = 0.07;
 fade-delta = 3;
 no-fading-openclose = false;
 no-fading-destroyed-argb = false;
+fade-exclude = [
+  "class_g = 'slop'",
+]
 
 inactive-opacity = 1;
 active-opacity = 1;
@@ -11,10 +14,10 @@ inactive-opacity-override = true;
 detect-client-opacity = true;
 
 shadow = true;
-shadow-radius = 25;
-shadow-offset-x = -25;
-shadow-offset-y = -25;
-shadow-opacity = .5;
+shadow-radius = 15;
+shadow-offset-x = -15;
+shadow-offset-y = -15;
+shadow-opacity = .4;
 shadow-exclude = [
   "class_g = 'Polybar'",
   "window_type = 'popup_menu'",
