--- a/unix-like/.config/polybar/colors.ini
+++ b/unix-like/.config/polybar/colors.ini
@@ -1,6 +1,6 @@
 [colors]
-background = #021b21
+background = #010101
 foreground = #f8f8f6
-accent = #37bf8d
+accent = #ff4343
 alert = #ff8989
 disabled = #707070
