--- a/unix-like/.config/mpd/mpd.conf
+++ b/unix-like/.config/mpd/mpd.conf
@@ -1,4 +1,4 @@
-music_directory		"/run/media/p3nguin/zzztoj"
+music_directory		"~/Music"
 playlist_directory	"~/.config/mpd/playlists"
 db_file				"~/.config/mpd/mpd.db"
 state_file			"~/.config/mpd/mpdstate"
