--- a/unix-like/.config/polybar/config.ini
+++ b/unix-like/.config/polybar/config.ini
@@ -1,32 +1,32 @@
 [bar/main]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 32pt
+height = 28pt
 dpi = ${xrdb:Xft.dpi}
 bottom = true
 background = ${colors.background}
 foreground = ${colors.foreground}
 module-margin = 1
-font-0 = "Fira Code:pixelsize=10:weight=Bold;3"
-font-1 = "Symbols Nerd Font:pixelsize=10;3"
-font-2 = "Roboto:pixelsize=10;3"
-font-3 = "Noto Sans CJK JP:pixelsize=10;3"
-font-4 = "Noto Sans JP:pixelsize=10;3"
-font-5 = "Noto Sans CJK HK:pixelsize=10;3"
-font-6 = "Noto Sans HK:pixelsize=10;3"
-font-7 = "Noto Sans CJK KR:pixelsize=10;3"
-font-8 = "Noto Sans KR:pixelsize=10;3"
-font-9 = "Noto Sans CJK SC:pixelsize=10;3"
-font-10 = "Noto Sans SC:pixelsize=10;3"
-font-11 = "Noto Sans CJK TC:pixelsize=10;3"
-font-12 = "Noto Sans TC:pixelsize=10;3"
-font-13 = "Noto Color Emoji:scale=10;3"
-padding-left = 2
+font-0 = "monospace:pixelsize=9:weight=Bold;3"
+font-1 = "Symbols Nerd Font:pixelsize=9;3"
+font-2 = "sans:pixelsize=9:weight=Bold;3"
+font-3 = "Noto Sans CJK JP:pixelsize=9;3"
+font-4 = "Noto Sans JP:pixelsize=9;3"
+font-5 = "Noto Sans CJK HK:pixelsize=9;3"
+font-6 = "Noto Sans HK:pixelsize=9;3"
+font-7 = "Noto Sans CJK KR:pixelsize=9;3"
+font-8 = "Noto Sans KR:pixelsize=9;3"
+font-9 = "Noto Sans CJK SC:pixelsize=9;3"
+font-10 = "Noto Sans SC:pixelsize=9;3"
+font-11 = "Noto Sans CJK TC:pixelsize=9;3"
+font-12 = "Noto Sans TC:pixelsize=9;3"
+font-13 = "Noto Color Emoji:scale=9;3"
+padding-left = 1
 padding-right = 1
-; available module: date, weather, mpd, title, workspaces, wifi, battery, volume, volume-bar, brightness, brightness-bar
-modules-left = date weather mpd
-modules-center = workspaces
-modules-right = wifi battery volume
+; available module: date-12, date-24, mpd, title, workspaces, wifi, battery, volume, brightness
+modules-left = workspaces mpd
+modules-center = title
+modules-right = wifi battery volume date-12
 fixed-center = true
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -38,17 +38,17 @@ wm-restack = bspwm
 
 [module/workspaces]
 type = internal/xworkspaces
-icon-default= ""
+icon-default= "-"
 format = <label-state>
 format-background = ${colors.background}
 format-foreground = ${colors.foreground}
 format-overline = ${colors.background}
 format-underline = ${colors.background}
-label-active = "󰫢"
+label-active = "|"
 label-active-background = ${colors.background}
-label-active-foreground = ${colors.accent}
+label-active-foreground = ${colors.foreground}
 label-active-padding = 1
-label-occupied = "󰫣"
+label-occupied = "+"
 label-occupied-padding = 1
 label-urgent = %icon%
 label-urgent-foreground = ${colors.alert}
@@ -63,22 +63,6 @@ format = <label>
 label = %title%
 label-maxlen = 40
 
-[module/volume-bar]
-type = internal/pulseaudio
-format-volume = <ramp-volume> <bar-volume>
-ramp-volume-0 = "󰕿"
-ramp-volume-1 = "󰖀"
-ramp-volume-2 = "󰕾"
-bar-volume-width = 7
-bar-volume-foreground-0 = ${colors.accent}
-bar-volume-indicator = ●
-bar-volume-indicator-foreground = ${colors.foreground}
-bar-volume-fill = ━
-bar-volume-empty = ━
-bar-volume-empty-foreground = ${colors.disabled}
-label-muted = "󰖁 shhh!"
-label-muted-foreground = ${colors.disabled}
-
 [module/volume]
 type = internal/pulseaudio
 format-volume = <ramp-volume> <label-volume>
@@ -88,6 +72,7 @@ ramp-volume-2 = "󰕾"
 label-volume = %percentage%
 label-muted = "󰖁 shhh!"
 label-muted-foreground = ${colors.disabled}
+click-right = pavucontrol &
 
 [module/brightness]
 type = internal/xbacklight
@@ -97,21 +82,7 @@ ramp-1 = "󰃟"
 ramp-2 = "󰃠"
 label = %percentage%
 
-[module/brightness-bar]
-type = internal/xbacklight
-format = <ramp> <bar>
-ramp-0 = "󰃞"
-ramp-1 = "󰃟"
-ramp-2 = "󰃠"
-bar-width = 7
-bar-foreground-0 = ${colors.accent}
-bar-indicator = ●
-bar-indicator-foreground = ${colors.foreground}
-bar-fill = ━
-bar-empty = ━
-bar-empty-foreground = ${colors.disabled}
-
-[module/date]
+[module/date-12]
 type = internal/date
 interval = 1
 date = "%I:%M%p"
@@ -119,13 +90,13 @@ date-alt = "%b %d (%a)"
 label = %date%
 label-foreground = ${colors.foreground}
 
-[module/weather]
-type = custom/script
-exec = ~/.config/bspwm/bin/get-weather
-exec-if = ping wttr.in -c 1
-click-left = alacritty -e ~/.config/bspwm/bin/get-weather -o
-tail = false
-interval = 60
+[module/date-24]
+type = internal/date
+interval = 1
+date = "%H:%M"
+date-alt = "%b %d (%a)"
+label = %date%
+label-foreground = ${colors.foreground}
 
 [module/battery]
 type = internal/battery
@@ -161,7 +132,7 @@ label-connected = "%{A1:$HOME/.config/bspwm/bin/network &:}%essid%%{A}"
 [module/mpd]
 type = internal/mpd
 format-online = <label-song>
-format-online-prefix = "󰎆 "
+format-online-prefix = "󰝚 "
 label-song = "%title%"
 
 [settings]
